# stales-geom-viewer

./: Cargo.toml  README.md
graphs/: t1.ipynb  t3.ipynb
graphs/discrete-grid/: log-20-50-0-523472856.txt  log-20-50-0-829434295.txt  log-20-50-1-140621984.txt  log-20-50-1-376700046.txt  log-20-50-1-649292861.txt  log-20-50-1-879043467.txt  log-20-50-2-119578065.txt  log-20-50-2-377957337.txt  log-20-50-2-695777524.txt  log-20-50-2-944157744.txt  log-20-50-3-206453280.txt  log-20-50-3-501086075.txt  log-20-50-3-894802515.txt  log-20-50-4-459269743.txt  log-20-50-4-720677423.txt  log-20-50-5-339659930.txt  log-20-50-5-3622812.txt  log-20-50-5-895371889.txt  log-20-59-11-503167019.txt  log-21-1-33-17051621.txt  log-21-3-3-832823960.txt  t4.ipynb  test-cases.txt
graphs/discrete-grid/.ipynb_checkpoints/: t4-checkpoint.ipynb
src/: common_traits.rs  geom.rs  lib.rs  main.rs  point.rs  utils.rs
