[package]
name = "stales-geom-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
euclid = { version = "0.22.11", features = ["serde", "libm"] }
macroquad = "0.4"
rand = "0.9.2"
random_color = "1.1.0"
slab = "0.4.11"

[[bin]]
name = "voronoi"
path = "src/bin/voronoi.rs"

[[bin]]
name = "hello-world"
path = "src/bin/main.rs"
