[package]
name = "stales-geom-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
euclid = { version = "0.22.11", features = ["serde", "libm"] }
fnv = "1.0.7"
log = "0.4.28"
macroquad = "0.4"
ordered-float = { version = "5.1.0", features = ["rand", "serde"] }
petgraph = "0.8.3"
priority-queue = "2.7.0"
rand = "0.9.2"
random_color = "1.1.0"
slab = "0.4.11"
voronoi = "0.1.4"

[[bin]]
name = "voronoi"
path = "src/bin/voronoi/voronoi.rs"

[[bin]]
name = "hello-world"
path = "src/bin/main.rs"
