[package]
name = "stales-geom-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.42"
euclid = { version = "0.22.11", features = ["serde", "libm"] }
fnv = "1.0.7"
genmap = "1.0.3"
log = "0.4.28"
macroquad = { version = "0.4", features = ["log-rs"] }
ordered-float = { version = "5.1.0", features = ["rand", "serde"] }
petgraph = "0.8.3"
priority-queue = "2.7.0"
rand = "0.9.2"
random_color = "1.1.0"
slab = "0.4.11"
stderrlog = "0.6.0"
voronoi = "0.1.4"

[[bin]]
name = "voronoi"
path = "src/bin/voronoi/voronoi.rs"

[[bin]]
name = "hello-world"
path = "src/bin/main.rs"

[[bin]]
name = "convex-hull"
path = "src/bin/convex-hull/convex-hull.rs"

[[bin]]
name = "discrete-grid"
path = "src/bin/discrete-grid/discrete-grid.rs"
